# nihstro

./: .travis.yml  CMakeLists.txt  Readme.md  assembler.cpp  bit_field.h  license.txt  main.cpp  shader_binary.h  shader_bytecode.h
.github/workflows/: main.yml
docs/: instruction_set.md  nihcode_spec.md
examples/assembler/cube/: Makefile  README.md
examples/assembler/cube/data/: test.vsh
examples/assembler/cube/source/: main.c
examples/assembler/cube_lighting/: Makefile  README.md
examples/assembler/cube_lighting/data/: test.vsh
examples/assembler/cube_lighting/source/: main.c
examples/inline_assembler/simple/: simple.cpp
include/nihstro/: bit_field.h  float24.h  inline_assembly.h  parser_assembly.h  parser_assembly_private.h  parser_shbin.h  shader_binary.h  shader_bytecode.h  source_tree.h
src/: assembler.cpp  bit_field.h  disassembler.cpp  parser_assembly.cpp  parser_assembly.h  parser_shbin.cpp  preprocessor.cpp  shader_bytecode.h
src/parser_assembly/: common.cpp  compare.cpp  declaration.cpp  floatop.cpp  flowcontrol.cpp
src/tests/: parser.cpp  source_tree_iterator.cpp
